fix: issues corrections